# openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.3
+openapi: 3.1.0
 info:
   title: Choreo Sample - Book List - Nodejs REST API Service
   description: >-
@@ -119,7 +119,14 @@ paths:
       responses:
         "200":
           description: Healthy response
-
+  /healthz2:
+    summary: Healthcheck endpoint 2
+    get:
+      summary: Healthcheck2
+      operationId: Healthcheck2
+      responses:
+        "200":
+          description: Healthy response
 components:
   schemas:
     Key:
